logo alignment fixed

--- a/public/assets/web/css/style.css
+++ b/public/assets/web/css/style.css
@@ -352,7 +352,7 @@ section:has(.overlay) .btn_menuTwo {
 .logo {
     position: absolute;
     top: 20px;
-    left: 45%;
+    left: 47%;
     margin: 0 auto;
     z-index: 3;
 }
